--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "ethereumjs-tx": "^1.3.6",
     "logger": "0.0.1",
-    "openzeppelin-solidity": "1.10.0",
-    "web3": "^1.0.0-beta.34"
+    "openzeppelin-solidity": "^2.2.0",
+    "truffle-hdwallet-provider": "^1.0.13",
+    "web3": "^1.0.0-beta.51"
   },
   "devDependencies": {
     "dotenv": "^6.0.0",
-    "ethereumjs-wallet": "^0.6.0",
-    "truffle-wallet-provider": "0.0.5"
+    "ethereumjs-wallet": "^0.6.0"
   }
 }
